<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rbezliudko.secondhomework.FirstHomeworkActivity">

    <TextView
        android:text="@string/text_view_equation"
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:textSize="@dimen/text_view_size"/>

    <TextView
        android:text="@string/text_view_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_view_size"/>

    <EditText
        android:id="@+id/edit_text_1_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:text="@string/text_view_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_view_size"/>

    <EditText
        android:id="@+id/edit_text_1_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:text="@string/text_view_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_view_size"/>

    <EditText
        android:id="@+id/edit_text_1_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned" />

    <CheckBox
        android:id="@+id/checkbox_complex"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_complex"/>

    <Button
        android:id="@+id/button_result"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_result"/>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_view_size" />

    <Button
        android:id="@+id/button_return_first"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/button_return"/>

</LinearLayout>
